k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ui-beyond
  labels:
    app.kubernetes.io/part-of: ui-beyond
